blockml/test/errors/04_model/e49/e49_one.view
view: e49_one
table: 1
fields:
- calculation: calc2
  sql: ${dim1}

- dimension: dim1
  sql: 222
